--- a/01_sections/05_results/02_tc2.md
+++ b/01_sections/05_results/02_tc2.md
@@ -4,3 +4,4 @@
 - Outcome: App online, consistent error rate of 5%.
 
 ![Test Case 2 Results. \label{Test Case 2 Results}](04_assets/loadtests/usecase2/ss2.png){width=100% height=100%}
+\pagebreak
